--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-blo[context.production.environment]
-  HUGO_VERSION = "0.81.0"
-
-[context.deploy-preview.environment]
-  HUGO_VERSION = "0.81.0"
+[build] publish = "public" command = "hugo"
+[build.environment] HUGO_VERSION = "0.81.0" HUGO_ENABLEGITINFO = "true"
+[context.production.environment] HUGO_ENV = "production"
+[context.branch-deploy.environment] HUGO_VERSION = "0.81.0"  
+[context.deploy-preview.environment] HUGO_VERSION = "0.81.0
