--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://florentinkweb.netlify.app
+baseURL: https://florentinsite.netlify.app
 languageCode: en-us
 title: Florentin
 theme: forty
