--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
-[build] publish = "public" command = "hugo"
+[build] publish = "public" 
+  command = "hugo"
 [build.environment] 
   HUGO_VERSION = "0.81.0" 
   HUGO_ENABLEGITINFO = "true"
